# uptotrial-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  api.ipynb  conftest.py  debug_api.py  logging.conf  pyproject.toml  tox.ini  update_dependencies.py  uptotrial.py
.cursor/rules/: 01-project-structure.mdc  02-code-style.mdc  03-api-guidelines.mdc  04-llm-integration.mdc  04-testing.mdc  05-testing.mdc  06-correlation-id.mdc
.github/workflows/: main_uptotrial-backend.yml  test.yml
alembic/: env.py
alembic/versions/: 9b5f5f45b925_remember_trace_ids.py  c8aabe0fadb5_initial_commit.py
app/: __init__.py  app.py  config.py  main.py
app/api/: deps.py  errors.py  middleware.py  router.py
app/api/endpoints/: chat.py  health.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py
app/cli/: commands.py
app/core/: config.py
app/infrastructure/: async_fetch.py  fetch.py
app/infrastructure/clinical_trials_gov/: api_requests.py
app/infrastructure/clinical_trials_gov/schemas/: common.py  enums.py  study.py
app/infrastructure/database/: __init__.py  models.py  session.py
app/infrastructure/database/models/: __init__.py  base_model.py
app/infrastructure/googleapi/: place_api.py
app/infrastructure/llm/: client.py  template_manager.py
app/infrastructure/openai/: __init__.py  completion.py  engines.py
app/services/: template_manager.py
app/services/clinical_trials_agent/: __init__.py  clinical_trials_agent.py  template_manager.py
app/services/clinical_trials_agent/prompts/: clinical_trials_agent.jinja  tool_explanation.jinja
docs/: correlation_id.md  development_guide.md  responses_api.md
misc/: api.ipynb
prds/: 2025-04-19-Fastapi-Clinical-Trials-Search.md
src/uptotrial/: app.py  main.py
src/uptotrial/api/: deps.py  errors.py  middleware.py
src/uptotrial/api/v1/: router.py
src/uptotrial/api/v1/endpoints/: health.py
src/uptotrial/cli/: __init__.py  commands.py
src/uptotrial/core/: config.py
src/uptotrial/infrastructure/database/: session.py
src/uptotrial/infrastructure/database/models/: __init__.py  base.py
src/uptotrial/infrastructure/llm/: client.py
tests/: conftest.py
tests/integration/app/api/endpoints/: test_health.py
tests/integration/test_api/: test_health.py
tests/unit/test_llm/: __init__.py  test_client.py
tests/unit/test_middleware/: test_correlation_id.py
